--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "jest": "^23.6.0",
     "lodash": "^4.17.11",
     "semistandard": "^12.0.1"
+  },
+  "semistandard": {
+    "env": [
+      "jest"
+    ]
   }
 }
