--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "homepage": "https://github.com/Precognitive/tablecloth#readme",
   "dependencies": {
     "@google-cloud/bigtable": "^0.16.0",
+    "lodash": "^4.17.11"
+  },
+  "devDependencies": {
     "jest": "^23.6.0",
-    "lodash": "^4.17.11",
     "semistandard": "^12.0.1"
   },
   "semistandard": {
