--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A tool for keeping your interactions with BigTable nice and tidy.",
   "main": "index.js",
   "scripts": {
-    "test": "npx jest",
+    "test": "npx jest && codecov",
     "lint": "npx semistandard"
   },
   "repository": {
@@ -27,6 +27,10 @@
   "devDependencies": {
     "jest": "^23.6.0",
     "semistandard": "^12.0.1"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   },
   "semistandard": {
     "env": [
