--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
-language:
-  node_js
+language: node_js
+sudo: false
+node_js:
+- 11
+- 10
+- 9
+- 8
 install:
 - npm install -g codecov
 script:
-- test
+- npm test
 - codecov
