--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "npx jest && codecov",
     "lint": "npx semistandard"
   },
+  "engines": {
+    "node": ">=8.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Precognitive/tablecloth.git"
