--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "npx jest",
     "lint": "npx semistandard"
   },
+  "engines": {
+    "node": ">=8.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Precognitive/tablecloth.git"
@@ -27,6 +30,10 @@
   "devDependencies": {
     "jest": "^23.6.0",
     "semistandard": "^12.0.1"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   },
   "semistandard": {
     "env": [
