--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx jest",
-    "lint": "npx semistandard"
+    "lint": "npx semistandard",
+    "flow": "flow"
   },
   "engines": {
     "node": ">=8.0"
@@ -29,6 +30,8 @@
   },
   "devDependencies": {
     "jest": "^23.6.0",
+    "flow-bin": "^0.84.0",
+    "rollup-plugin-flow": "^1.1.1",
     "semistandard": "^12.0.1"
   },
   "jest": {
