--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npx jest",
     "lint": "npx semistandard",
-    "flow": "flow"
+    "flow": "flow",
+    "build": "flow-remove-types --out-dir dist/ src/ --ignore \"__tests__|__mocks__\""
   },
   "engines": {
     "node": ">=8.0"
@@ -26,12 +27,13 @@
   "homepage": "https://github.com/Precognitive/tablecloth#readme",
   "dependencies": {
     "@google-cloud/bigtable": "^0.16.0",
+    "flow-remove-types": "^1.2.3",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "jest": "^23.6.0",
     "flow-bin": "^0.84.0",
-    "rollup": "^0.66.6",
+    "jest": "^23.6.0",
+    "rollup": "^0.36.0",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-flow": "^1.1.1",
     "semistandard": "^12.0.1"
