--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A tool for keeping your interactions with BigTable nice and tidy.",
   "main": "index.js",
   "scripts": {
-    "test": "npx jest",
-    "lint": "npx semistandard",
+    "test": "npx jest ./src",
+    "lint": "npx eslint ./src",
     "flow": "flow",
     "build": "flow-remove-types --out-dir dist/ src/ --ignore \"__tests__|__mocks__\""
   },
@@ -27,24 +27,19 @@
   "homepage": "https://github.com/Precognitive/tablecloth#readme",
   "dependencies": {
     "@google-cloud/bigtable": "^0.16.0",
-    "flow-remove-types": "^1.2.3",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.8.0",
+    "eslint-plugin-flowtype": "^3.1.1",
     "flow-bin": "^0.84.0",
+    "flow-remove-types": "^1.2.3",
     "jest": "^23.6.0",
-    "rollup": "^0.36.0",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-flow": "^1.1.1",
     "semistandard": "^12.0.1"
   },
   "jest": {
     "coverageDirectory": "./coverage/",
     "collectCoverage": true
-  },
-  "semistandard": {
-    "env": [
-      "jest"
-    ]
   }
 }
