--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest ./src",
     "lint": "eslint ./src",
     "flow": "flow",
+    "codecov": "codecov",
     "build": "flow-remove-types --out-dir dist/ src/ --ignore \"__tests__|__mocks__\""
   },
   "engines": {
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "codecov": "^3.1.0",
     "eslint": "^5.8.0",
     "eslint-plugin-flowtype": "^3.1.1",
     "flow-bin": "^0.84.0",
