--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: node_js
 sudo: false
 node_js:
-- 11
 - 10
-- 9
 - 8
 install:
-- npm install -g codecov
+- npm install
 script:
+- npm audit
+- npm run lint
 - npm test
-- codecov
+- npm run codecov
