--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "A tool for keeping your interactions with BigTable nice and tidy.",
   "main": "index.js",
   "scripts": {
-    "test": "npx jest",
-    "lint": "npx semistandard"
+    "test": "jest ./src",
+    "lint": "eslint ./src",
+    "flow": "flow",
+    "codecov": "codecov",
+    "build": "flow-remove-types --out-dir dist/ src/ --ignore \"__tests__|__mocks__\""
   },
   "engines": {
     "node": ">=8.0"
@@ -28,16 +31,17 @@
     "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "codecov": "^3.1.0",
+    "eslint": "^5.8.0",
+    "eslint-plugin-flowtype": "^3.1.1",
+    "flow-bin": "^0.84.0",
+    "flow-remove-types": "^1.2.3",
     "jest": "^23.6.0",
     "semistandard": "^12.0.1"
   },
   "jest": {
     "coverageDirectory": "./coverage/",
     "collectCoverage": true
-  },
-  "semistandard": {
-    "env": [
-      "jest"
-    ]
   }
 }
